--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "name": "discord-js-lavalink-music-bot-erela-js-lava-music",
   "version": "8.0.0",
-  "description": "An advanced Discord.js Music Bot, which connects via Lavalink and erela.js! Including Slash-Commands and a BUTTON-BASED-REQUEST-SYSTEM",
+  "description": "An advanced Discord.js , which connects via Lavalink and erela.js! Including Slash-Commands and a BUTTON-BASED-REQUEST-SYSTEM",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
