--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
   "dependencies": {
-    "@discordjs/builders": "^0.11.0",
-    "@discordjs/opus": "^0.7.0",
+    "@discordjs/builders": "^0.8.2",
+    "@discordjs/opus": "^0.8.0",
     "@discordjs/voice": "^0.7.5",
     "colors": "^1.4.0",
     "cpu-stat": "^2.0.1",
-    "discord.js": "^13.5.0",
+    "discord.js": "^13.3.1",
     "enmap": "^5.8.7",
     "erela.js": "^2.3.3",
-    "erela.js-apple": "^1.2.6",
+    "erela.js-apple": "^1.2.5",
     "erela.js-deezer": "^1.0.7",
     "erela.js-facebook": "^1.0.4",
     "erela.js-spotify": "^1.2.0",
-    "moment": "^2.29.1",
+    "express": "^4.17.1",
+    "moment": "^2.29.4",
     "ms": "^2.1.3",
-    "radio-browser": "^2.1.9"
+    "node-fetch": "^2.6.7",
+    "radio-browser": "^2.1.8"
   },
   "name": "discord-js-lavalink-music-bot-erela-js-lava-music",
   "version": "8.0.0",
@@ -47,5 +49,8 @@
   "bugs": {
     "url": "https://github.com/Tomato6966/discord-js-lavalink-Music-Bot-erela-js/issues"
   },
-  "homepage": "https://github.com/Tomato6966/discord-js-lavalink-Music-Bot-erela-js#readme"
+  "homepage": "https://github.com/Tomato6966/discord-js-lavalink-Music-Bot-erela-js#readme",
+  "devDependencies": {
+    "node": "^16.6.1"
+  }
 }
