--- a/botconfig/config.json
+++ b/botconfig/config.json
@@ -15,7 +15,7 @@
          {
             "host": "65.108.101.89",
             "port": 2333,
-            "password": "youshallnotpass",
+            "password": "youshallnotpass"
            
          }
       ]
