--- a/botconfig/config.json
+++ b/botconfig/config.json
@@ -12,12 +12,12 @@
    },
    "clientsettings": {
       "nodes": [
-         {
-            "host": "65.108.101.89",
-            "port": 9905,
-            "password": "youshallnotpass"
-           
-         }
+{
+            host: "lavalink.invalid-studios.com",
+            port: 2333,
+            password: "invaliduser",
+            secure: "false"
+}
       ]
    },
 
