--- a/botconfig/config.json
+++ b/botconfig/config.json
@@ -13,9 +13,9 @@
    "clientsettings": {
       "nodes": [
          {
-            "host": "lavalink.invalid-studios.com",
-            "port": 2333,
-            "password": "invaliduser",
+            "host": "lavalink.joshsevero.dev",
+            "port": 80,
+            "password": "oxygen",
              "secure": false
          }
       ]
