--- a/botconfig/config.json
+++ b/botconfig/config.json
@@ -6,7 +6,7 @@
    ],
    "status": {
       "text": "{prefix}help | played {songsplayed} Songs on {guildcount} Guilds ",
-      "text2": "My prefix {prefix}",
+      "text2": "My prefix {prefix} \n Bot của vm🆅🅼🅴🅽🅿🅽#6040",
       "type": "PLAYING",
       "url": "https://twitch.tv/#"
    },
